--- a/docs/docs/guides/troubleshooting.mdx
+++ b/docs/docs/guides/troubleshooting.mdx
@@ -25,8 +25,7 @@ All of them are supposed to work correctly only within the same minor version. T
 
 ### Native part of Reanimated doesn't seem to be initialized
 
-**Problem:**
-This issue happens when Reanimated fails to initialize its native side from JavaScript.
+**Problem:** This issue happens when Reanimated fails to initialize its native side from JavaScript.
 
 **Solution:**
 
@@ -34,8 +33,9 @@ This issue happens when Reanimated fails to initialize its native side from Java
 2. Check if your platform is supported by Reanimated. Currently we support:
    - Android
    - iOS
+   - macOS
    - Web
-3. If you are running in a brownfield app, make sure to initialize the native library manually.
+3. If you are using Reanimated in a brownfield app, make sure to initialize the native library manually.
 
 ### Unknown version of Reanimated Babel plugin
 
@@ -96,11 +96,11 @@ If this didn't help, you probably have a dependency that contains already transf
 
 After that make sure to run your package manager again, either `yarn` or `npm install`.
 
-### Outdated version of `react-native` for New Architecture
+### Outdated version of React Native for New Architecture
 
 **Problem:** Reanimated supports New Architecture (Fabric) only on the latest minor release of React Native.
 
-**Solution:** Please upgrade to at React Native 0.72 or downgrade to an older version of Reanimated 3.
+**Solution:** Please upgrade to at least React Native 0.72 or downgrade to an older version of Reanimated 3.
 
 ## Threading issues
 
@@ -126,20 +126,20 @@ In this example, `callee` cannot be called from a worklet ran on UI thread becau
 1. If you want to synchronously execute this method, mark it as a worklet using `worklet` directive:
 
 ```diff
-function callee(){
-+   'worklet';
-    console.log("hello");
-  }
+ function callee() {
++  'worklet';
+   console.log("hello");
+ }
 ```
 
 2. If you want to execute this function on the JS thread, wrap it using `runOnJS`:
 
 ```diff
-function caller(){
-  'worklet';
--   callee();
-+   runOnJS(callee)();
-}
+ function caller() {
+   'worklet';
+-  callee();
++  runOnJS(callee)();
+ }
 ```
 
 Check [this page](https://docs.swmansion.com/react-native-reanimated/docs/fundamentals/glossary#worklet) to learn more about Reanimated and its worklets.
