Move useReducedMotion to utilities

--- a/docs/docs/utilities/useReducedMotion.mdx
+++ b/docs/docs/utilities/useReducedMotion.mdx
@@ -2,6 +2,7 @@
 id: useReducedMotion
 title: useReducedMotion
 sidebar_label: useReducedMotion
+sidebar_position: 4
 ---
 
 This hook allows you to conditionally control animations based on the system's `Reduced Motion` accessibility setting.
