Add reduced motion to LAs and SETs in docs

--- a/docs/docs/layout-animations/keyframe-animations.mdx
+++ b/docs/docs/layout-animations/keyframe-animations.mdx
@@ -132,6 +132,11 @@ How long the animation should last.
 default: 0
 Allows to start with a specified delay.
 
+### reduceMotion
+
+default: ReduceMotion.System
+Determines how the animation responds to the device's `Reduced Motion` accessibility setting.
+
 ### withCallback
 
 Allows to execute code when keyframe animation ends.
