--- a/docs/docs/layout-animations/layout-transitions.mdx
+++ b/docs/docs/layout-animations/layout-transitions.mdx
@@ -61,6 +61,7 @@ Linear transition, animates both position and dimension in the same way.
 - `restSpeedThreshold` default: 0.001
 - `withCallback` callback that will fire after the exit animation ends
 - `randomDelay` randomize delay of the animation between 0 and provided delay ( or 1000ms if delay not provided )
+- `reduceMotion` determines how the animation responds to the device's `Reduced Motion` accessibility setting.
 
 #### Example
 
@@ -82,6 +83,7 @@ Sequenced transition, animates firstly x-position and width, then later y-positi
 - `withCallback` callback that will fire after the exit animation ends
 - `randomDelay` randomize delay of the animation between 0 and provided delay ( or 1000ms if delay not provided )
 - `reverse` reverse order of the animation ( first animates y-dimension and height)
+- `reduceMotion` determines how the animation responds to the device's `Reduced Motion` accessibility setting.
 
 #### Example
 
@@ -102,6 +104,7 @@ Fading transition, animates the opacity of component, so it will disappear with 
 - `delay` (in ms) default: 0
 - `withCallback` callback that will fire after the exit animation ends
 - `randomDelay` randomize delay of the animation between 0 and provided delay ( or 1000ms if delay not provided )
+- `reduceMotion` determines how the animation responds to the device's `Reduced Motion` accessibility setting.
 
 #### Example
 
@@ -124,6 +127,7 @@ Jumping transition, component "jumps" to the new position.
 - `delay` (in ms) default: 0
 - `withCallback` callback that will fire after the exit animation ends
 - `randomDelay` randomize delay of the animation between 0 and provided delay ( or 1000ms if delay not provided )
+- `reduceMotion` determines how the animation responds to the device's `Reduced Motion` accessibility setting.
 
 #### Example
 
@@ -148,6 +152,7 @@ Curved transition, enables to animate each position and dimension with different
 - `easingY` provides Easing for y-position ( default: `Easing.out(Easing.ease)`)
 - `easingWidth` provides Easing for width ( default: `Easing.in(Easing.exp)`)
 - `easingHeight` provides Easing for height ( default: `Easing.out(Easing.exp)`)
+- `reduceMotion` determines how the animation responds to the device's `Reduced Motion` accessibility setting.
 
 #### Example
 
@@ -169,6 +174,7 @@ Entry/Exit transition, lets you specify different animations for exiting from th
 - `randomDelay` randomize delay of the animation between 0 and provided delay ( or 1000ms if delay not provided )
 - `entering` animation that will be used for component entering ( default: `FadeIn`)
 - `exiting` animation that will be used for component exiting ( default: `FadeOut`)
+- `reduceMotion` determines how the animation responds to the device's `Reduced Motion` accessibility setting.
 
 #### Combine Transition
 
