Mention keyframe animations in accessibility

--- a/docs/docs/fundamentals/accessibility.mdx
+++ b/docs/docs/fundamentals/accessibility.mdx
@@ -95,8 +95,8 @@ function App() {
 
 When `Reduced Motion` is enabled:
 
-- entering and layout transitions instantaneously reach their endpoints.
-- exiting and shared transitions are omitted.
+- entering, keyframe, and layout animations instantaneously reach their endpoints.
+- exiting animations and shared transitions are omitted.
 
 ## `useReducedMotion`
 
