--- a/docs/docs/core/useAnimatedStyle.mdx
+++ b/docs/docs/core/useAnimatedStyle.mdx
@@ -13,7 +13,7 @@ For animating properties use [`useAnimatedProps`](/docs/core/useAnimatedProps) i
 ## Reference
 
 ```jsx
-import { useAnimatedStyle } from "react-native-reanimated";
+import { useAnimatedStyle } from 'react-native-reanimated';
 
 function App() {
   // highlight-next-line
@@ -21,11 +21,11 @@ function App() {
     return {
       opacity: sv.value ? 1 : 0,
     };
-  // highlight-next-line
+    // highlight-next-line
   });
 
   // highlight-next-line
-  return <Animated.View style={[styles.box, animatedStyles]} />
+  return <Animated.View style={[styles.box, animatedStyles]} />;
 }
 ```
 
