Change relative links to absolute in v2 docs

--- a/docs/versioned_docs/version-2.x/guide/debugging.mdx
+++ b/docs/versioned_docs/version-2.x/guide/debugging.mdx
@@ -61,7 +61,7 @@ It is only debugging the UI context, which is specific to the Reanimated
 library that might be difficult to debug in some scenarios, which are all
 explained in this article.
 
-You can read more about Reanimated's architecture [here](../fundamentals/architecture).
+You can read more about Reanimated's architecture [here](/docs/2.x/fundamentals/architecture).
 
 ### Debugging web apps
 
@@ -117,7 +117,7 @@ function will not be available, and its usage will trigger this error:
 ```
 
 You may still use the standard web version of `measure` as described
-[here](../api/nativeMethods/measure).
+[here](/docs/2.x/api/nativeMethods/measure).
 
 Those functions that are provided by Reanimated and do not have web
 implementations won't work at all.
