--- a/docs/docs/animations/withDecay.mdx
+++ b/docs/docs/animations/withDecay.mdx
@@ -72,7 +72,7 @@ Available properties:
 | velocityFactor <Optional />   | `number`           | 1                     | Velocity multiplier.                                                                                                                                        |
 | rubberBandEffect <Optional /> | `boolean`          | false                 | Makes the animation bounce over the limit specified in `clamp`.                                                                                             |
 | rubberBandFactor <Optional /> | `number`           | 0.6                   | Strength of the rubber band effect.                                                                                                                         |
-| reduceMotion <Optional />     | `ReduceMotion`     | `ReduceMotion.System` | A parameter that determines how the animation responds to the device's `Reduced Motion` accessibility setting.                                              |
+| reduceMotion <Optional />     | `ReduceMotion`     | `ReduceMotion.System` | A parameter that determines how the animation responds to the device's reduced motion accessibility setting.                                                |
 
 #### `callback` <Optional />
 
