--- a/docs/docs/animations/withDelay.mdx
+++ b/docs/docs/animations/withDelay.mdx
@@ -50,7 +50,7 @@ Animation to delay.
 
 #### `reduceMotion` <Optional />
 
-A parameter that determines how the animation responds to the device's `Reduced Motion` accessibility setting.
+A parameter that determines how the animation responds to the device's reduced motion accessibility setting.
 
 ### Returns
 
