--- a/docs/docs/animations/withRepeat.mdx
+++ b/docs/docs/animations/withRepeat.mdx
@@ -69,7 +69,7 @@ A function called on animation complete. In case the animation is cancelled, the
 
 #### `reduceMotion` <Optional />
 
-A parameter that determines how the animation responds to the device's `Reduced Motion` accessibility setting.
+A parameter that determines how the animation responds to the device's reduced motion accessibility setting.
 
 ### Returns
 
