--- a/docs/docs/layout-animations/keyframe-animations.mdx
+++ b/docs/docs/layout-animations/keyframe-animations.mdx
@@ -135,7 +135,7 @@ Allows to start with a specified delay.
 ### reduceMotion
 
 default: ReduceMotion.System
-Determines how the animation responds to the device's `Reduced Motion` accessibility setting.
+Determines how the animation responds to the device's reduced motion accessibility setting.
 
 ### withCallback
 
