--- a/docs/docs/animations/withSequence.mdx
+++ b/docs/docs/animations/withSequence.mdx
@@ -46,7 +46,7 @@ enum ReduceMotion {
 
 #### `reduceMotion` <Optional />
 
-A parameter that determines how the animation responds to the device's `Reduced Motion` accessibility setting.
+A parameter that determines how the animation responds to the device's reduced motion accessibility setting.
 
 #### `...animations`
 
